css/style.css
/* ... */
#wrapper {
  max-width: 800px;
  margin: 0 auto;
  padding: 60px 40px 40px 40px;
}

#wrapper.home {
    max-width: 800px;
    margin: 0 auto;
    padding: 0px 40px 20px 40px;
}

.home #avatar {
    float: right;
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

/* Typography */
/*Accent color*/
a,
#title,
#post-list a:hover,
#post-list li:hover .dates,
#title:hover {
    text-decoration: none;
    color: #5694f1;
}

/* p { text-align: justify; } */

p a { color: #5694f1; }

/*Transitions*/
a,
#post-nav a,
#post-list a    {
    -webkit-transition: color 0.15s ease, background-color 0.15s ease;
    -moz-transition: color 0.15s ease, background-color 0.15s ease;
    -ms-transition: color 0.15s ease, background-color 0.15s ease;
    -o-transition: color 0.15s ease, background-color 0.15s ease;
    transition: color 0.15s ease, background-color 0.15s ease;
}

ul li  { list-style-type:circle; }
li { list-style-position:inside; }

/* Line Height */
#post-body, p { line-height:1.7; }

b, strong { font-weight: 400;
  color: #1E2025; }
em, i { font-style: italic; }

#title {
    display: inline-block;
    line-height: 100%;
    font-weight: 700;
    font-size: 19px;
    margin: 0;
    padding-bottom: 20px;
}

.description {
    float: right;
    font: italic 14px/1.4em "Roboto Mono";
    color: #aaa;
}



.home h1 {
    font-size: 30px;
    letter-spacing: -1px;
    color: #222;
    font-weight: bold;
}

.home h2 {
    font: italic 19px/1.3em "Roboto Mono";
    color: #bbb;
}

.post header {
    text-align:center;

}

.post h1 {
    margin-bottom: 20px;
    color: #222;
    font: 300 32px/1.4em "Roboto Mono";
}

.post h2 {
    margin-top: 40px;
    margin-bottom: 20px;
      font: 300 24px/1.5 "Roboto Mono";
      color: #111;
}


.post h2.headline {
    /*font: italic 22px/1.3em Georgia,serif;*/
    font: normal 13px/1.5em "Roboto Mono";
    margin: -5px 0 40px 0;
    color: #b2b9be;
      font-size: 13px;
      text-transform: uppercase;
      letter-spacing: 2px;
      /*margin-top: 15px;*/
      display: inline-block;
}

#post-list h2 {
    font: normal 17px/1.5em "Roboto Mono";
    color: #aaa;
    /*max-width: 400px;*/
    margin-top: 2px;
}

h3, h4, h5 { color:#333; }

h3 { font-size:20px; font-weight: 400; }
h4 { font-size:16px; font-weight:bold; }
h5 { font-size:15px; font-weight: bold; }

h6 {
    font-size: 13px;
    font-weight: bold;
    color: #666;
    margin-bottom: 6px;
}

p.small {
    color: #bbb;
    font-size: 14px;
    line-height: 1.5;
    display: block;
    text-align: center;
    margin-top: 20px;
}

blockquote {
    font-style: italic;
    padding-left: 15px;
    margin-bottom: 20px;
    border-left: 6px solid #eee;
    background-color: rgba(225, 225, 225, 0.2);
    color: #999;
}

blockquote p {
    padding-top: 15px;
    padding-bottom: 15px;
}

hr {
    display: block;
    border: none;
    height: 1px;
    margin: 40px auto;
    background: #eee;
}

span.code { font-family: "Roboto Mono"; background-color:#111111; font-size:14px; }

.highlighttable pre {
    font-family: "Roboto Mono";
    padding:20px;
    background: #1c1c1c;
    font-size: 14px;
    line-height: 1.25em !important;
    font-weight: 400;
    color: #d0d4d7;
    overflow-x: auto;
    margin-bottom: 0;
}

.highlighttable {
    position: relative;
    -webkit-filter: saturate(70%) !important;
    -moz-filter: saturate(70%) !important;
    filter: saturate(70%) !important;
}

.highlighttable::before {
    content: "";
    width: 100vw;
    height: 100%;
    position: absolute;
    left: 50%;
    -webkit-transform: translateX(-50%);
    -moz-transform: translateX(-50%);
    transform: translateX(-50%);
    background-color: #1c1c1c;
    z-index: -1;
}

.highlighttable tr td {
    padding: 0;
    margin: 0;
    border: none;
}

.highlighttable td.code {
    position: relative;
    width: 100%;
}

.highlight {
    position: absolute;
    left: 0;
    width: 100%;
}

.highlight pre {
    padding-left: 0;
}

.linenodiv {
    padding: 0 !important;
    margin-right: 0;
}

.linenodiv pre {
    color: #4a4a4a;
}

p code, table code, li code {
    background-color: #f0f0f0;
    padding-bottom: 1px;
    margin-left: -3px;
    padding-left: 3px;
    margin-right: -3px;
    padding-right: 3px;
    border-radius: 4px;
}

table {
    width: 100%;
    margin: 40px 0;
    border-collapse: collapse;
    line-height: 1.5em;
}

th,td {
    text-align: left;
    padding-right: 20px;
    vertical-align: top;
}

table td,td {
    border-spacing: none;
    border-style: solid;
    padding: 10px 15px;
    border-width: 1px 0 0 0;
}

tr>td {
    border-top: 1px solid #eaeaea;
}

tr:nth-child(odd)>td {
    background: #fcfcfc;
}

thead th,th {
    text-align: left;
    padding: 10px 15px;
    height: 20px;
    font-weight: bold;
    color: #444;
    border-bottom: 1px solid #dadadc;
    cursor: default;
    white-space: nowrap;
}

img {
    width: 100%;
    max-width: 100%;
}

/* Made with Cactus Badge */
#badge {
    position: absolute;
    bottom: 8px;
    right: 8px;
    height: 48px;
    width: 48px;
}

/*=========================================
Post List
=========================================== */
#post-list,#archive-list {
    margin-top: 100px;
}

#post-list li,#archive-list li {
    list-style-type: none;
}

#post-list li:last-child {
    margin-bottom: 0;
}

#post-list li+li {
    padding-top: 20px;
    border-top: 1px solid #eee;
}

#post-list a {
    color: #333;
    display: block;
    font: bold 19px/1.7 "Roboto Mono";
}

#post-list .dates {
    float: right;
    position: relative;
    top: 1px;
    font: 300 17px/1.8 "Roboto Mono";
    color: #bbb;
}

#post-list-footer {
    border-top: 1px solid #eee;
    margin-top: 20px;
    padding-top: 100px;
}

#archive-link {
    display: inline-block;
    font-size: 13px;
    font-weight: bold;
    border-radius: 4px;
    padding: 3px 10px 6px;
    box-shadow: 0 0 0 1px hsla(207,83%,80%,1);
}
/* ... */

